--- a/src/assets/css/mixins/_mixins.scss
+++ b/src/assets/css/mixins/_mixins.scss
@@ -1,8 +1,5 @@
-
-
-
-@mixin breakpoint($size){
-  @media screen and(max-width: $size +"px") {
-    @content
+@mixin breakpoint($size) {
+  @media screen and(max-width: $size + "px") {
+    @content;
   }
 }
