--- a/src/assets/css/pages/_product-detail.scss
+++ b/src/assets/css/pages/_product-detail.scss
@@ -98,10 +98,14 @@
       .submit-button {
         text-align: center;
         button {
+          cursor: pointer;
+          &:hover {
+            background-color: blue;
+          }
           width: 50%;
           border-radius: 1rem;
           border: none;
-          background-color: blue;
+          background-color: rgb(46, 46, 231);
           color: white;
           padding: 1rem;
           margin-top: 2rem;
