--- a/src/assets/css/pages/_activeMail.scss
+++ b/src/assets/css/pages/_activeMail.scss
@@ -4,5 +4,19 @@
   border-radius: 1rem;
   text-align: center;
   background-color: white;
-  // position: relative;
+  min-height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &__content {
+    background-color: white;
+    padding: 1rem;
+    border-radius: 0.3rem;
+    h1 {
+      font-size: 1.4rem;
+    }
+  }
 }
