--- a/src/assets/css/pages/_register.scss
+++ b/src/assets/css/pages/_register.scss
@@ -5,12 +5,16 @@
   min-height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
+
   &__content {
     width: 500px;
     padding: 2rem;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     border-radius: 0.3rem;
     background-color: white;
+    @include breakpoint(992) {
+      border-radius: 0;
+    }
   }
   &-title {
     text-align: center;
